# fire-box

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Justfile  PLAN.md  README.md  REVIEW.md  fire-box.service  sample.json
.github/: dependabot.yml
.github/workflows/: Build.yml  build-linux.yml  build-macos.yml  build-windows.yml  linux.yml  macos.yml  windows.yml
cli/: AGENTS.md  Cargo.toml
cli/src/: commands.rs  main.rs  server.rs
client/: Cargo.toml
client/src/: client.rs  com.rs  dbus.rs  error.rs  lib.rs  stream.rs  types.rs  xpc.rs
client/tests/: error_test.rs  types_test.rs
common/: AGENTS.md  Cargo.toml
common/src/: AGENTS.md  config.rs  error.rs  filesystem.rs  lib.rs  provider.rs
common/src/protocols/: dashscope.rs  openai.rs
common/tests/: anthropic.rs
core/: AGENTS.md  Cargo.toml  build.rs
core/src/: ipc.rs  lib.rs  protocol.rs  provider.rs
core/src/protocols/: anthropic.rs  copilot.rs  mod.rs
core/tests/: copilot.rs
crates/: AGENTS.md
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: AGENTS.md  auth.rs  keystore.rs  lib.rs  metrics.rs  models.rs  session.rs
crates/core/src/protocols/: AGENTS.md  copilot.rs  dashscope.rs
crates/core/tests/: AGENTS.md  anthropic.rs  copilot.rs  dashscope.rs  openai.rs
crates/daemon/: AGENTS.md  Cargo.toml
crates/daemon/src/: AGENTS.md  main.rs
docs/: ACCESS.md  AGENTS.md  APPLICATION.md  CAPABILITY.md  CONTROL.md  PROTOCOL.md  SERVICE.md  linux-integration.md
docs/backend/: capability.md  control.md  tofu.md
docs/client/: chat.md  connection.md  embeddings.md  errors.md  overview.md
docs/frontend/: allowlist.md  connections.md  dashboard.md  route.md  settings.md  tray.md
ffi/: Cargo.toml  build.rs
ffi/src/: fire_box.udl  lib.rs
linux/: .gitignore  AGENTS.md  README.md  firebox.desktop  firebox.service  meson.build
linux/data/dbus/: org.firebox.Capability.xml  org.firebox.Control.xml
linux/data/gsettings/: org.firebox.gschema.xml
linux/data/polkit/: org.firebox.policy
linux/data/systemd/: firebox.service
linux/resources/: fire-box.gresource.xml
linux/src/: allowlist.cppm  allowlist.hpp  app.cpp  connections.cppm  connections.hpp  daemon.c  dashboard.cppm  dashboard.hpp  dbus_client.cppm  dbus_client.hpp  helper.cpp  i18n.cppm  meson.build  providers.cppm  providers.hpp  routes.cppm  routes.hpp
linux/src/backend/: capability_adaptor.cpp  capability_adaptor.hpp  control_adaptor.cpp  control_adaptor.hpp  http_client.cpp  http_client.hpp  main.cpp  meson.build  router.hpp  service.cpp  service.hpp  tofu.cpp  tofu.hpp
linux/src/client/: chat_stream.cpp  chat_stream.hpp  firebox_client.cpp  firebox_client.hpp  meson.build
linux/src/common/: coroutine.hpp  credential.cpp  credential.hpp  dbus_types.hpp  error.hpp  log.hpp  meson.build  storage.cpp  storage.hpp
linux/src/frontend/: allowlist_page.cpp  allowlist_page.hpp  application.cpp  application.hpp  chart_widget.cpp  chart_widget.hpp  connections_page.cpp  connections_page.hpp  dashboard_page.cpp  dashboard_page.hpp  main.cpp  meson.build  route_page.cpp  route_page.hpp  settings_page.cpp  settings_page.hpp  window.cpp  window.hpp
linux/test/: meson.build  test_client.cpp  test_coroutine.cpp  test_dbus_ping.cpp  test_router.cpp  test_storage.cpp
linux/ui/: window.blp
macos/: .gitignore  AGENTS.md  FireBox.entitlements  Info.plist  Package.swift  README.md  com.firebox.service.plist
macos/Resources/: AGENTS.md  com.firebox.agent.plist
macos/Sources/: AGENTS.md
macos/Sources/App/: AppDelegate.swift  AppState.swift  ContentView.swift  FireboxApp.swift  ServiceClient.swift
macos/Sources/App/Views/: AllowlistView.swift  ConnectionsView.swift  DashboardView.swift  ModelsView.swift  ProvidersView.swift  RoutesView.swift
macos/Sources/FireBox/: AGENTS.md  AppDelegate.swift  AppState.swift  Bridge.swift  CoreClient.swift  MainView.swift  Models.swift  SidebarView.swift  StatusBarController.swift  XPCService.swift
macos/Sources/FireBox/Views/: AGENTS.md  ApprovalView.swift  AppsView.swift  DashboardView.swift  MetricsView.swift  OAuthPromptView.swift  ProvidersView.swift  SettingsView.swift
macos/Sources/Helper/: main.swift
native/: AGENTS.md
native/windows/: README.md
service/: Cargo.toml
service/src/: lib.rs  main.rs
service/src/interfaces/: capability.rs  codec.rs  com.rs  connections.rs  control.rs  dbus.rs  mod.rs  xpc.rs
service/src/middleware/: access.rs  config.rs  keyring.rs  metadata.rs  metrics.rs  mod.rs  route.rs  storage.rs  store.rs
service/src/providers/: anthropic.rs  config.rs  consts.rs  copilot.rs  dashscope.rs  llamacpp.rs  mod.rs  openai.rs  retry.rs  shared.rs
service/tests/: anthropic.rs  anthropic_provider.rs  copilot.rs  copilot_provider.rs  dashscope.rs  dashscope_provider.rs  integration.rs  keyring_middleware.rs  keyring_tests.rs  llamacpp.rs  llamacpp_provider.rs  metadata_middleware.rs  metrics_middleware.rs  openai.rs  openai_provider.rs  provider_config.rs  provider_tests.rs  provider_trait.rs  provider_types.rs  providers.rs  retry_tests.rs  route.rs  route_middleware.rs  store_middleware.rs  store_tests.rs  traits.rs  types.rs
src/: channel.rs  config.rs  filesystem.rs  main.rs  models.rs  protocol.rs  provider.rs  router.rs  server.rs  session.rs
src/protocols/: anthropic.rs  dashscope.rs  mod.rs
windows/: .gitignore  Firebox.slnx  wix-patch.xml
windows/App/: App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
windows/App/Pages/: AllowlistPage.xaml  AllowlistPage.xaml.cs  ConnectionsPage.xaml  ConnectionsPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  ProvidersPage.xaml  ProvidersPage.xaml.cs  RoutesPage.xaml  RoutesPage.xaml.cs
windows/App/Properties/: launchSettings.json
windows/App/Properties/PublishProfiles/: win-arm64.pubxml  win-x64.pubxml
windows/App/Services/: Dtos.cs  FireBoxComService.cs  ResourceHelper.cs
windows/App/ViewModels/: ViewModels.cs
windows/Helper/: Helper.csproj  Program.cs  Strings.fr-FR.resx  Strings.resx  Strings.zh-CN.resx  app.manifest
(+9 files in other folders)
