[package]
name = "fire-box"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.11.1"
futures-util = "0.3.31"
oauth2 = "5.0.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
shellexpand = { version = "3.1.1", features = ["full"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "v8", "fast-rng", "serde"] }
