[workspace]
resolver = "2"
members = ["client", "service"]

[workspace.package]
version = "1.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full", "signal"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4"
