[workspace]
resolver = "2"
members = ["client", "service"]

[workspace.package]
version = "1.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full", "signal"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
env_logger = "0.11"
futures-util = "0.3"
tokio-stream = { version = "0.1.18", features = ["fs", "full", "io-util", "net", "sync", "tokio-util"] }
reqwest = { version = "0.13.2", features = ["json", "gzip", "brotli", "deflate", "zstd", "cookies", "multipart", "form", "query", "stream", "socks", "rustls"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
metrics = "0.24.3"
hex = "0.4"
dirs = "6"
getrandom = "0.4"
md5 = "0.8"
url = "2.5"
sysinfo = "0.38"
keyring = "3.6"

# IPC dependencies
zbus = { version = "5.14", features = ["tokio"] }
xpc-connection = "0.2.3"
xpc-connection-sys = "0.1.1"

# Platform-specific dependencies
systemd-journal-logger = "2.2"
windows-service = "0.8.0"
