[package]
name = "fire-box"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fire-box"
path = "src/main.rs"

[dependencies]
common.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
