[package]
name = "firebox-client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
xpc-connection-sys.workspace = true
block.workspace = true
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
] }
