[package]
name = "core"
version = "0.3.0"
edition = "2024"


[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
interprocess = { workspace = true }
keyring = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
