[package]
name = "ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
common.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
