[package]
name = "firebox-service"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

aes-gcm = "0.10"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "linux-native",
    "tokio",
    "windows-native",
] }
metrics = "0.24.3"
reqwest = { version = "0.13.2", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "cookies",
    "multipart",
    "form",
    "query",
    "stream",
    "socks",
    "rustls",
] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio-stream = { version = "0.1.18", features = [
    "fs",
    "full",
    "io-util",
    "net",
    "sync",
    "tokio-util",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.13.2", features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
xpc-connection = "0.2.3"
xpc-connection-sys = "0.1.1"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Threading",
] }
windows-core = "0.62.0"
windows-service = "0.8.0"
