[package]
name = "firebox-service"
version.workspace = true
edition.workspace = true
description = "FireBox Local AI Service - Cross-platform system service"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

aes-gcm = "0.10"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "linux-native",
    "tokio",
    "windows-native",
] }
metrics = "0.24.3"
reqwest = { version = "0.13.2", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "cookies",
    "multipart",
    "form",
    "query",
    "stream",
    "socks",
    "rustls",
] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio-stream = { version = "0.1.18", features = [
    "fs",
    "full",
    "io-util",
    "net",
    "sync",
    "tokio-util",
] }
futures-util = "0.3"

# For store encryption
hex = "0.4"
dirs = "6"
getrandom = "0.4"

# For URL parsing
url = "2.5"

# System info for monitoring
sysinfo = "0.38"

# Linux: systemd support
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.13.2", features = ["tokio"] }
systemd-journal-logger = "2.2"

# macOS: launchd support
[target.'cfg(target_os = "macos")'.dependencies]
xpc-connection = "0.2.3"
xpc-connection-sys = "0.1.1"
block = "0.1.6"

# Windows: Service Control Manager support
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
] }
windows-core = "0.62.0"
windows-service = "0.8.0"
