[package]
name = "firebox-service"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aes-gcm.workspace = true
zeroize.workspace = true
metrics.workspace = true
reqwest.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
hex.workspace = true
dirs.workspace = true
getrandom.workspace = true
md5.workspace = true
url.workspace = true
sysinfo.workspace = true
keyring.workspace = true

# Linux: systemd support
[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
systemd-journal-logger.workspace = true

# macOS: launchd support
[target.'cfg(target_os = "macos")'.dependencies]
xpc-connection.workspace = true
xpc-connection-sys.workspace = true
block = "0.1"
libc = "0.2"

# Windows: Service Control Manager + COM server support
[target.'cfg(target_os = "windows")'.dependencies]
windows-service.workspace = true
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Rpc",
    "Win32_System_RemoteDesktop",
] }
